--- a/theme/index.html
+++ b/theme/index.html
@@ -20,6 +20,9 @@
   <link href='https://www.google-analytics.com' rel='preconnect'>
   <link href='https://www.googleadservices.com' rel='preconnect'>
 	<link href='https://www.googletagmanager.com' rel='preconnect'>
+	<link href="https://fonts.googleapis.com/css?family=Lato|Poppins&display=swap" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" charset="UTF-8" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" />
+	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
   {script}
   {placeholder_head_end}
 </head>
